Add  home work fo docker containers theme

--- a/do[1]-domain-dom[2].html
+++ b/do[1]-domain-dom[2].html
@@ -469,10 +469,13 @@
                     <h2>Task d[1][dth][1]</h2>
                     <p>
                     <ul>
-                        <li>Load "example" image</li>
-                        <li>Run "example" image</li>
-                        <li>Delete "example" image</li>
-                        <li>Forward the ports for the container</li>
+                        <li>Use "example" image</li>
+                        <li>Load new package for image</li>
+                        <li>Save new changes</li>
+                        <li>Run container and run load package command</li>
+                        <li>Run container and run load package command</li>
+                        <li>Create docker save example</li>
+                        <li>Create docker export example</li>
                     </ul>
                     </p>
 
@@ -517,7 +520,7 @@
 
         <div class="jumbotron">
             <h1>Documents and related links</h1>
-            <a href="https://habrahabr.ru/post/310460/">Полное практическое руководство по Docker: с нуля до кластера на AWS</a>
+            <a href="http://tuhrig.de/difference-between-save-and-export-in-docker//">http://tuhrig.de/difference-between-save-and-export-in-docker/</a>
         </div>
 
     </div><!--/row-->
