Added new theme - volumes -updates

--- a/do[1]-domain-dom[5].html
+++ b/do[1]-domain-dom[5].html
@@ -93,9 +93,8 @@
                 <p><span class="alert alert-success" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">Команду</span></p>
                 <div class="collapse" id="collapse2">
                     <div class="card card-body">
-                        # Set proxy server, replace host:port with values for your servers
-                        ENV http_proxy host:port
-                        ENV https_proxy host:port
+                        $ docker inspect --format="{{.Volumes}}" 6c9da8f68a9e<br />
+                        map[/e1:/Users/bessarabov/e1]<br />
                     </div>
                 </div>
 
