--- a/do[1]-domain-dom[4].html
+++ b/do[1]-domain-dom[4].html
@@ -264,7 +264,7 @@
                 <a href="do[1]-domain-dom[2].html" class="list-group-item">Docker: часть 2 – управление контейнерами</a>
                 <a href="do[1]-domain-dom[3].html" class="list-group-item">Docker: изменить рабочую директорию</a>
                 <a href="do[1]-domain-dom[4].html" class="list-group-item active">Создаем Dockerfile</a>
-                <a href="#" class="list-group-item">Процесс сборки образов</a>
+                <a href="do[1]-domain-dom[5].html" class="list-group-item">Docker Volumes</a>
                 <a href="#" class="list-group-item">Контейнеризация приложений</a>
                 <a href="#" class="list-group-item">Основы сети в Docker</a>
 
