--- a/do[1]-domain-dom[2].html
+++ b/do[1]-domain-dom[2].html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Docker: часть 1 – введение, запуск удаление и проброс портов</title>
+    <title>Docker: часть 2 – управление контейнерами</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -509,7 +509,10 @@
 
 
 
-                <a href="do[1]-domain-dom[1].html" class="list-group-item active">Основы Docker</a>
+                <a href="do[1]-domain-dom[1].html" class="list-group-item">DOCKER[1] - основы докера : часть 1 – введение, установка и запуск</a>
+                <a href="do[1]-domain-dom[2].html" class="list-group-item active">Docker: часть 2 – управление контейнерами</a>
+                <a href="do[1]-domain-dom[3].html" class="list-group-item">Docker: изменить рабочую директорию</a>
+                <a href="#" class="list-group-item">Основы сети в Docker</a>
                 <a href="#" class="list-group-item">Процесс сборки образов</a>
                 <a href="#" class="list-group-item">Контейнеризация приложений</a>
                 <a href="#" class="list-group-item">Основы сети в Docker</a>
