--- a/do[1]-domain.html
+++ b/do[1]-domain.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Docker</title>
+    <title>Docker course</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -64,7 +64,7 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Docker</a></li>
+                    <li><a href="do[1]-domain.html">Docker</a></li>
                     <li><a href="#">Drupal 8</a></li>
                     <li><a href="#">Ansible</a></li>
                     <li role="separator" class="divider">Vagrant</li>
@@ -80,7 +80,10 @@
 
 
 
-                <a href="do[1]-domain-dom[1].html" class="list-group-item active">Основы Docker</a>
+                <a href="do[1]-domain-dom[1].html" class="list-group-item">DOCKER[1] - основы докера : часть 1 – введение, установка и запуск</a>
+                <a href="do[1]-domain-dom[2].html" class="list-group-item">Docker: часть 2 – управление контейнерами</a>
+                <a href="do[1]-domain-dom[3].html" class="list-group-item">Docker: изменить рабочую директорию</a>
+                <a href="#" class="list-group-item">Основы сети в Docker</a>
                 <a href="#" class="list-group-item">Процесс сборки образов</a>
                 <a href="#" class="list-group-item">Контейнеризация приложений</a>
                 <a href="#" class="list-group-item">Основы сети в Docker</a>
